--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div class="quote_container" id="quote_container">
+        <!-- Quote -->
+        <div class="quote_text">
+            <i class="fas fa-quote-left"></i>
+            <span id="quote">What you are is what you have been. What you'll be is what you do now.</span>
+        </div>
+        <!-- Author -->
+        <div class="quote_author">
+            <span id="author">Buddha</span>
+        </div>
+        <!-- Buttons -->
+        <div class="button_container">
+            <button class="twitter_btn" id="twitter" title="Tweet This!">
+                <i class="fab fa-twitter"></i>
+            </button>
+            <button id="new_quote">New Quote</button>
+        </div>
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
