--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <!-- Quote -->
         <div class="quote_text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">What you are is what you have been. What you'll be is what you do now.</span>
+            <span id="quote"></span>
         </div>
         <!-- Author -->
         <div class="quote_author">
-            <span id="author">Buddha</span>
+            <span id="author"></span>
         </div>
         <!-- Buttons -->
         <div class="button_container">
